fix: update strength clamping logic for version compatibility with java 21